--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,10 @@
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Drag Scroll Provider Example</title>
-</head>
-<body>
-    <div id="root"></div>
-    <script src="main.js"></script>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <title>Drag Scroll Provider Example</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="main.js"></script>
+    </body>
 </html>
